# TimeGuardian

./: Cargo.toml  README.md  run-timeguardian.sh
docs/: timeguardian.mdx
src/: main.rs
src/tui/: app.rs  event.rs  mod.rs  ui.rs
