[package]
name = "TimeGuardian"
version = "0.1.0"
edition = "2024"
authors = ["Jannis Krija <https://github.com/cipher-shad0w>"]
description = "A modern CLI tool for blocking distracting websites to improve productivity"
license = "MIT"
repository = "https://github.com/cipher-shad0w/timeguardian"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.12", features = ["derive"] }
argh = "0.1.12"
directories = "5.0.1"
serde = "1.0"
toml = "0.8.8"
crossterm = {version = "0.27.0", features = ["event-stream"]}
spinners = "4.1.1"
ratatui = "0.25.0"
tui-input = "0.8.0"
color-eyre = "0.6"
